@@ -4943,3 +4943,42 @@ int	zbx_replace_mem_dyn(char **data, size_t *data_alloc, size_t *data_len, size_
 
 	return (int)sz_changed;
 }
+
+/******************************************************************************
+ *                                                                            *
+ * Function: zbx_strsplit                                                     *
+ *                                                                            *
+ * Purpose: splits string                                                     *
+ *                                                                            *
+ * Parameters: src       - [IN] source string                                 *
+ *             delimiter - [IN] delimiter                                     *
+ *             left      - [IN/OUT] first part of the string                  *
+ *             right     - [IN/OUT] second part of the string or NULL, if     *
+ *                                  delimiter was not found                   *
+ *                                                                            *
+ ******************************************************************************/
+void	zbx_strsplit(const char *src, char delimiter, char **left, char **right)
+{
+	char	*delimiter_ptr;
+
+	if (NULL == (delimiter_ptr = strchr(src, delimiter)))
+	{
+		*left = zbx_strdup(NULL, src);
+		*right = NULL;
+	}
+	else
+	{
+		size_t	left_size;
+		size_t	right_size;
+
+		left_size = (size_t)(delimiter_ptr - src) + 1;
+		right_size = strlen(src) - (size_t)(delimiter_ptr - src);
+
+		*left = zbx_malloc(NULL, left_size);
+		*right = zbx_malloc(NULL, right_size);
+
+		memcpy(*left, src, left_size - 1);
+		(*left)[left_size - 1] = '\0';
+		memcpy(*right, delimiter_ptr + 1, right_size);
+	}
+}
